force-app/main/default/objects/Invoice_Event__e/Invoice_Event__e.object-meta.xml
<CustomObject>
    <description>Platform event for invoice lifecycle changes and payment processing integration</description>
    <label>Invoice Event</label>
    <pluralLabel>Invoice Events</pluralLabel>
</CustomObject>