force-app/main/default/objects/Invoice_Event__e/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <description>Account associated with the invoice</description>
    <label>Account ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>