force-app/main/default/objects/Invoice_Event__e/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>Type of invoice event (Created, Updated, Sent, Paid, Voided)</description>
    <label>Event Type</label>
    <required>true</required>
    <type>Text</type>
    <length>50</length>
</CustomField>