force-app/main/default/objects/Invoice_Event__e/fields/Invoice_Id__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Id__c</fullName>
    <description>ID of the invoice record that triggered the event</description>
    <label>Invoice ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>