force-app/main/default/objects/Invoice_Event__e/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Current status of the invoice</description>
    <label>Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>