force-app/main/default/objects/Invoice_Event__e/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <description
  >Total amount of the invoice for payment processing</description>
    <label>Total Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>